# workwatch

./: .gitignore  Makefile  README.md  pyproject.toml  workwatch.spec
scripts/: install.sh  release.sh
workwatch/: __init__.py  __main__.py  activity.py  archiver.py  cli.py  config.py  daemon.py  log_display.py  mail_reader.py  notifier.py  overtime.py  parser.py  timer.py
