[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "workwatch"
version = "1.0.0"
description = "Auto-sleep your Mac after work hours — powered by Apple Mail attendance emails"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Sagnik Bhowmick" },
]
keywords = ["macos", "attendance", "timer", "productivity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]

[project.scripts]
workwatch = "workwatch.cli:main"

[project.optional-dependencies]
build = ["pyinstaller>=6.0"]

[tool.setuptools.packages.find]
include = ["workwatch*"]
